--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,45 +5,49 @@
     <title>Учет ВТ</title>
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
+    <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+    <nav id="navbar-toggle">
+        <div class="logo">
+            <img th:src="@{/image/logo.png}" width="40px" height="40px" alt="logo">
+            <h6>Учет технических средств организации</h6>
         </div>
-    </div>
-</nav>
+    </nav>
+    <main id="content-toggle">
+        <div class="container-fluid">
+            <div class="row w-100 ">
+                <div class="d-flex align-items-center">
+                    <i class="bi bi-list" style="font-size: 1.5rem; color: #888888; cursor: pointer" onclick="toggleNavbarScript()"></i>
+                    <h6 class="info-role">Вы вошли как: Администратор</h6>
+                </div>
 
-<script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
+            </div>
+
+        </div>
+
+<!--        <i class="bi-alarm" style="font-size: 2rem; color: cornflowerblue;"></i>-->
+
+<!--        <form method="get" action="/test">-->
+<!--            <select class="js-example-basic-single" style="width: 250px" name="state">-->
+<!--                <option value="AL">Alabama</option>-->
+<!--                <option value="BL">Blabama</option>-->
+<!--                <option value="CL">Clabama</option>-->
+<!--                <option value="GL">Dlabama</option>-->
+<!--            </select>-->
+<!--            <button type="submit">ok</button>-->
+<!--        </form>-->
+
+    </main>
+    <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
+    <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
+    <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
+    <script>
+        $(document).ready(function() {
+            $('.js-example-basic-single').select2();
+        });
+    </script>
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </body>
 </html>
