--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,16 +10,51 @@
 </head>
 <body>
     <nav id="navbar-toggle">
-        <div class="logo">
-            <img th:src="@{/image/logo.png}" width="40px" height="40px" alt="logo">
-            <h6>Учет технических средств организации</h6>
+        <div class="header-navbar d-flex justify-content-between">
+            <div class="logo">
+                <img th:src="@{/image/logo.png}" width="30px" height="30px" alt="logo">
+                <h6>Учет технических<br>средств организации</h6>
+            </div>
+            <i class="bi bi-list" style="font-size: 1.5rem; color: white; cursor: pointer" onclick="toggleNavbarScript()"></i>
         </div>
+        <ul class="menu list-default">
+            <li class="active">
+                <a class="link-item" href="#">
+                    <i class="bi bi-columns-gap" style="font-size: 1.5rem; color: white;"></i>
+                    <p>Домашняя страница</p>
+                </a>
+            </li>
+            <li>
+                <a class="link-item" href="#">
+                    <i class="bi bi-motherboard" style="font-size: 1.5rem; color: white;"></i>
+                    <p>Техника</p>
+                </a>
+            </li>
+            <li>
+                <a class="link-item" href="#">
+                    <i class="bi bi-file-earmark-text" style="font-size: 1.5rem; color: white;"></i>
+                    <p>Документы</p>
+                </a>
+            </li>
+            <li>
+                <a class="link-item" href="#">
+                    <i class="bi bi-clock-history" style="font-size: 1.5rem; color: white;"></i>
+                    <p>История</p>
+                </a>
+            </li>
+            <li>
+                <a class="link-item" href="#">
+                    <i class="bi bi-gear" style="font-size: 1.5rem; color: white;"></i>
+                    <p>Настройки</p>
+                </a>
+            </li>
+        </ul>
     </nav>
-    <main id="content-toggle">
+    <main id="content-main">
         <div class="container-fluid">
             <div class="row w-100 ">
                 <div class="d-flex align-items-center">
-                    <i class="bi bi-list" style="font-size: 1.5rem; color: #888888; cursor: pointer" onclick="toggleNavbarScript()"></i>
+
                     <h6 class="info-role">Вы вошли как: Администратор</h6>
                 </div>
 
