--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,57 +9,166 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <nav id="navbar-toggle">
-        <div class="header-navbar d-flex justify-content-between">
-            <div class="logo">
-                <img th:src="@{/image/logo.png}" width="30px" height="30px" alt="logo">
-                <h6>Учет технических<br>средств организации</h6>
-            </div>
-            <i class="bi bi-list" style="font-size: 1.5rem; color: white; cursor: pointer" onclick="toggleNavbarScript()"></i>
-        </div>
-        <ul class="menu list-default">
-            <li class="active">
-                <a class="link-item" href="#">
-                    <i class="bi bi-columns-gap" style="font-size: 1.5rem; color: white;"></i>
-                    <p>Домашняя страница</p>
-                </a>
-            </li>
-            <li>
-                <a class="link-item" href="#">
-                    <i class="bi bi-motherboard" style="font-size: 1.5rem; color: white;"></i>
-                    <p>Техника</p>
-                </a>
-            </li>
-            <li>
-                <a class="link-item" href="#">
-                    <i class="bi bi-file-earmark-text" style="font-size: 1.5rem; color: white;"></i>
-                    <p>Документы</p>
-                </a>
-            </li>
-            <li>
-                <a class="link-item" href="#">
-                    <i class="bi bi-clock-history" style="font-size: 1.5rem; color: white;"></i>
-                    <p>История</p>
-                </a>
-            </li>
-            <li>
-                <a class="link-item" href="#">
-                    <i class="bi bi-gear" style="font-size: 1.5rem; color: white;"></i>
-                    <p>Настройки</p>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <nav th:replace="/fragments/sidebar-fragment.html::sidebar('/home')" ></nav>
     <main id="content-main">
         <div class="container-fluid">
-            <div class="row w-100 ">
-                <div class="d-flex align-items-center">
-
-                    <h6 class="info-role">Вы вошли как: Администратор</h6>
+            <div class="row">
+                <div class="d-flex align-items-center justify-content-between mt-3">
+                    <h6 class="text-muted">Домашняя страница</h6>
+                    <a class="btn btn-close-white default-shadow" href="/logout"> <i class="bi bi-box-arrow-right"></i> Выход</a>
                 </div>
-
             </div>
 
+            <div class="card default-shadow mt-4">
+                <div class="row card-body d-flex align-items-center">
+                    <div class="col-12 col-sm-6 user-info d-flex align-items-center">
+                        <i class="bi bi-person-circle" style="font-size: 70px; color: #8E91AB"></i>
+                        <div class="d-flex flex-column w-100 m-3">
+                            <h6 class="p-0 m-0"><nobr>Фамилия Имя Отчество</nobr></h6>
+                            <p class="text-muted p-0 m-0">address</p>
+                            <p class="text-muted p-0 m-0">отдел/должность</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 user-dop-info">
+                        Доп инфо
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-color-dark-blue default-shadow mt-4">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-md-2 main-col">
+                            <p>Всего устройств</p>
+                            <h4>20000</h4>
+                        </div>
+                        <div class="col-12 col-md-10">
+                            <div class="row">
+                                <div class="col-12 col-md-12 col-xxl-6">
+                                    <div class="row">
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Эксплуатируется</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Настройка\Ремонт</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>На складе</nobr></p><h4>20000</h4></div>
+                                    </div>
+
+                                </div>
+                                <div class="col-12 col-md-12 col-xxl-6">
+                                    <div class="row">
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>В подразделении</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Утилизация</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Утилизировано</nobr></p><h4>20000</h4></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card bg-color-light-blue default-shadow mt-4">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-md-2 main-col">
+                            <p>Расходные материалы</p>
+                            <h4>200000</h4>
+                        </div>
+                        <div class="col-12 col-md-10">
+                            <div class="row">
+                                <div class="col-12 col-md-12 col-xxl-6">
+                                    <div class="row">
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Установленно (сегодня)</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Настройка\Ремонт</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>На складе</nobr></p><h4>20000</h4></div>
+                                    </div>
+
+                                </div>
+                                <div class="col-12 col-md-12 col-xxl-6">
+                                    <div class="row">
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>В подразделении</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Утилизация</nobr></p><h4>20000</h4></div>
+                                        <div class="col-12 col-md-4 card-info"><p><nobr>Утилизировано</nobr></p><h4>20000</h4></div>
+                                    </div>
+
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card bg-color-light-blue default-shadow mt-4">
+                        <div class="card-header">
+                            <h6 class="m-0">Заголовок</h6>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-status-type-device list-default">
+                                <li>
+                                    <p>Эксплуатируется</p>
+                                    <p>23423</p>
+                                </li>
+                                <li>
+                                    <p>Настройка\Ремонт</p>
+                                    <p>323</p>
+                                </li>
+                                <li>
+                                    <p>На складе</p>
+                                    <p>232</p>
+                                </li>
+                                <li>
+                                    <p>В подразделении</p>
+                                    <p>3233</p>
+                                </li>
+                                <li>
+                                    <p>Утилизация</p>
+                                    <p>23423</p>
+                                </li>
+                                <li>
+                                    <p>Утилизировано</p>
+                                    <p>2342</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card bg-color-light-blue default-shadow mt-4">
+                        <div class="card-header">
+                            <h6 class="m-0">Заголовок</h6>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-status-type-device list-default">
+                                <li>
+                                    <p>Эксплуатируется</p>
+                                    <p>23423</p>
+                                </li>
+                                <li>
+                                    <p>Настройка\Ремонт</p>
+                                    <p>323</p>
+                                </li>
+                                <li>
+                                    <p>На складе</p>
+                                    <p>232</p>
+                                </li>
+                                <li>
+                                    <p>В подразделении</p>
+                                    <p>3233</p>
+                                </li>
+                                <li>
+                                    <p>Утилизация</p>
+                                    <p>23423</p>
+                                </li>
+                                <li>
+                                    <p>Утилизировано</p>
+                                    <p>2342</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 <!--        <i class="bi-alarm" style="font-size: 2rem; color: cornflowerblue;"></i>-->
