--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Учет ВТ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
@@ -187,11 +188,11 @@
     <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
-    <script>
-        $(document).ready(function() {
-            $('.js-example-basic-single').select2();
-        });
-    </script>
+<!--    <script>-->
+<!--        $(document).ready(function() {-->
+<!--            $('.js-example-basic-single').select2();-->
+<!--        });-->
+<!--    </script>-->
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </body>
 </html>
