Add settings tabs

--- a/src/main/resources/templates/settings/settings-address.html
+++ b/src/main/resources/templates/settings/settings-address.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки пользователя')}"></div>
 
-        <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/users')}"></div>
+        <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/address')}"></div>
     </div>
 </main>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
