alteration   - layout of settings pages version 0.0.1

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -201,6 +201,10 @@ main {
 }
 
 
+.card-body-custom {
+    color: black !important;
+}
+
 /* scroll style ***************************************************************************************************** */
 :root{
     scrollbar-color: #3C3F57 white !important;
