--- a/src/main/resources/templates/settings/settings-user.html
+++ b/src/main/resources/templates/settings/settings-user.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Учет ВТ</title>
-    <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
-    <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
-    <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2-bootstrap.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/data-tables/DataTables-1.13.5/css/dataTables.bootstrap.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
@@ -16,20 +18,183 @@
 
         <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/users')}"></div>
 
+        <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
+
+        </div>
+
+        <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
+            Действие успешно выполненно.
+        </div>
+
         <div class="card bg-color-light-blue default-shadow mt-4">
             <div class="card-header">Личные настройки</div>
             <div class="card-body card-body-custom">
-<!--                <select class="js-example-responsive " multiple="multiple" style="width: 75%;">-->
-<!--                    <option value="1">hello</option>-->
-<!--                    <option th:selected="${true}" value="2" >world</option>-->
-<!--                </select>-->
+                <div class="alert alert-info mt-4" role="alert">
+                    Для изменения личных данных измените данные в соответсвующих полях, оставив поле "Пароль" пустым. <br>
+                    Для изменения пароля внесите изменения в его поле. Помните что длинна пароля должна составлять минимум 6 символов. <br>
+                    Логин поменять нельзя!
+                </div>
+                <form th:method="post" action="/settings/users/change" th:object="${User}">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <input type="hidden" th:field="*{id}">
+                            <input class="form-control" type="hidden" th:field="*{login}">
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-login-change">Логин</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Ошибка</small>
+                                <input id="user-login-change" class="form-control" type="text" th:field="*{login}" disabled>
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-password-change">Пароль</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Ошибка</small>
+                                <input id="user-password-change" class="form-control" type="password" autocomplete="new-password" th:field="*{password}">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-address-change">Адрес</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Ошибка</small>
+                                <select id="user-address-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{address}">
+                                    <option th:each="address : ${AllAddress}" th:value="${address.getId()}"
+                                            th:text="${
+                                                address.getCity().getName() + ' ' +
+                                                address.getStreet() + ' ' +
+                                                address.getHouse()  + ' (' +
+                                                address.getRegion().getName() + ')'
+                                            }"></option>
+                                </select>
+                            </div>
+                            <div sec:authorize="${hasAnyRole('Admin')}" class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-role-change">Роль</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Ошибка</small>
+                                <select id="user-role-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{role}">
+                                    <option th:each="role : ${AllRoles}" th:value="${role.getId()}" th:text="${role.getDescription()}"></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-surname-change">Фамилия</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Ошибка</small>
+                                <input id="user-surname-change" class="form-control" type="text" th:field="*{surname}">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-name-change">Имя</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка</small>
+                                <input id="user-name-change" class="form-control" type="text" th:field="*{name}">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label class="text-white" for="user-middle-name-change">Отчество</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">Ошибка</small>
+                                <input id="user-middle-name-change" class="form-control" type="text" th:field="*{middleName}">
+                            </div>
+                        </div>
+
+                        <button class="btn btn-primary" type="submit">Изменить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="card default-shadow mt-4">
+            <div class="card-header">Создание пользователя</div>
+            <div class="card-body card-body-custom">
+                <div class="alert alert-info mt-4" role="alert">
+                    Для создания пользователя выберите из списка доменное имя сотрудника, введите пароль не короче 6 символов, укажите адрес и роль пользователя.<br>
+                    В случае если после выбора доменного имени, поля: "Фамилия", "Имя", "Отчество" не заполнились автоматически, введите их вручную.
+                </div>
+                <form th:method="post" action="/settings/users/create" th:object="${NewUser}">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-login-create">Логин</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Ошибка</small>
+                                <select id="user-login-create" class="js-example-basic-single" style="width: 100% !important;" onchange="getSurnameAndMiddleNameAndName(this)" th:field="*{login}">
+                                    <option value=""></option>
+                                    <option th:each="userTB : ${AllUsersTelbook}" th:value="${userTB.getDomain()}" th:text="${userTB.getDomain() + ' (' + userTB.getName() + ')'}"></option>
+                                </select>
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-password-create">Пароль</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Ошибка</small>
+                                <input id="user-password-create" class="form-control" type="password" autocomplete="new-password" th:field="*{password}">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-address-create">Адрес</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Ошибка</small>
+                                <select id="user-address-create" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{address}">
+                                    <option th:each="address : ${AllAddress}" th:value="${address.getId()}"
+                                            th:text="${
+                                                address.getCity().getName() + ' ' +
+                                                address.getStreet() + ' ' +
+                                                address.getHouse()  + ' (' +
+                                                address.getRegion().getName() + ')'
+                                            }"></option>
+                                </select>
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-role-create">Роль</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Ошибка</small>
+                                <select id="user-role-create" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{role}">
+                                    <option th:each="role : ${AllRoles}" th:value="${role.getId()}" th:text="${role.getDescription()}"></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-surname-create">Фамилия</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Ошибка</small>
+                                <input id="user-surname-create" class="form-control" type="text" th:field="*{surname}" autocomplete="new-surname">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-name-create">Имя</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка</small>
+                                <input id="user-name-create" class="form-control" type="text" th:field="*{name}" autocomplete="new-name">
+                            </div>
+                            <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                                <label for="user-middle-name-create">Отчество</label>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">Ошибка</small>
+                                <input id="user-middle-name-create" class="form-control" type="text" th:field="*{middleName}" autocomplete="new-middle-name">
+                            </div>
+                        </div>
+
+                        <button class="btn btn-primary" type="submit">Создать</button>
+                    </div>
+                </form>
             </div>
         </div>
 
         <div class="card default-shadow mt-4">
             <div class="card-header">Все пользователи</div>
             <div class="card-body card-body-custom">
-
+                <table id="tableUser" class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Логин</th>
+                        <th scope="col">Фамилия</th>
+                        <th scope="col">Имя</th>
+                        <th scope="col">Отчество</th>
+                        <th scope="col">Роль</th>
+                        <th scope="col">Действия</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user: ${AllUsers}">
+                        <th th:text="${user.getLogin()}">1</th>
+                        <td th:text="${user.getSurname()}">1</td>
+                        <td th:text="${user.getName()}">1</td>
+                        <td th:text="${user.getMiddleName()}">1</td>
+                        <td th:text="${user.getRole().getDescription()}">1</td>
+                        <td class="d-flex ">
+                            <form th:if="${user.getIsDeleted() == null}" th:method="post" th:action="'/settings/users/remove/' + ${user.getId()}">
+                                <button type="submit" class="btn btn-danger">Удалить</button>
+                            </form>
+                            <form th:if="${user.getIsDeleted() != null}" th:method="post" th:action="'/settings/users/delete/' + ${user.getId()}">
+                                <button type="submit" class="btn btn-danger">Удалить навсегда</button>
+                            </form>
+                            <a class="btn btn-primary mx-2" th:href="'/settings/users/' + ${user.getId()}">Изменить</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -37,9 +202,24 @@
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/jquery.dataTables.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/dataTables.bootstrap5.js}"></script>
+
 <script>
     $(document).ready(function() {
-        $('.js-example-basic-single').select2();
+        $('.js-example-basic-single').select2({
+            theme: "bootstrap"
+        });
+
+        $('#tableUser').DataTable({
+            // dom: 'Blfrtip',
+            // buttons: [
+            //     'excel'
+            // ],
+            language: {
+                url: '/plugins/data-tables/ru.json'
+            }
+        });
     });
     $(".js-example-responsive").select2({
         width: 'resolve',
