--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2-bootstrap.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style-auth.css}">
 </head>
 <body>
@@ -45,7 +46,9 @@
     <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
     <script>
         $(document).ready(function() {
-            $('.js-example-basic-single').select2();
+            $('.js-example-basic-single').select2({
+                theme: "bootstrap"
+            });
         });
     </script>
 </body>
