--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,11 +31,11 @@
                             </h6>
                             <p class="text-muted p-0 m-0"
                                th:text="${
-                                AuthUser.getAddress().getCity().getName() + ' ' +
+                                AuthUser.getAddress().getSettlements().getType() + ' ' +
+                                AuthUser.getAddress().getSettlements().getName() + ' ' +
                                 AuthUser.getAddress().getStreet() + ' ' +
-                                AuthUser.getAddress().getHouse() + ' ' +
-                                AuthUser.getAddress().getSection() + ' (' +
-                                AuthUser.getAddress().getRegion().getName() + ')'
+                                AuthUser.getAddress().getHouse() + ' (' +
+                                AuthUser.getAddress().getSettlements().getRegion().getName() + ')'
                             }">
                             </p>
                             <p class="text-muted p-0 m-0" th:text="${AuthUserTelbook.getDepartment() + '/' + AuthUserTelbook.getPosition()}">отдел/должность</p>
